# SearchEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Test/: CMakeLists.txt  Test.cpp
resources/: file001.txt  file002.txt  file003.txt  file004.txt
searchEngineApp/: CMakeLists.txt
searchEngineApp/include/: ConverterJSON.h  ErrorsApp.h  InvertedIndex.h  SearchServer.h  appVersion.h
searchEngineApp/src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
